[tool.poetry]
name = "langchain-playground"
version = "0.1.0"
description = "A FastAPI-based Python tutor chatbot using Anthropic Claude LLM with LangChain and SQLite memory management"
authors = ["Shah E Rome Wali <shaheroumwali@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "api"}, {include = "config"}, {include = "models"}, {include = "services"}, {include = "utils"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.124.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
langchain = "^0.3.0"
langchain-anthropic = "^0.2.0"
langchain-core = "^0.3.0"
pydantic = "^2.12.0"
pydantic-settings = "^2.12.0"
python-dotenv = "^1.2.1"
anthropic = "^0.32.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
isort = "^5.12.0"
python-dotenv = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
